# rust_experiment_benchmarks

./: Cargo.toml
benches/: hex_vs_faster_hex.rs  main.rs  regex_compile_vs_non_compile.rs  vec_vs_bytes.rs
